# vbub-doc-ingestion

./: .env.local.example  .gitignore  AI_CONTEXT.md  ARCHITECTURE_RULES.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md  ingest_architecture_map.html  pyproject.toml  requirements.txt
adapters/: __init__.py
adapters/fastapi_app/: __init__.py  error_handlers.py  main.py  routes_ingest.py
development_process/: ingest_architecture_map.html
development_process/implementation_plans/: IMPLEMENTATION_PLAN.md  IP2.md  PROMPTS.md
development_process/system_rules/: AI_CONTEXT.md  ARCHITECTURE_RULES.md  CURSOR_CONSTITUTION.md
ingestion_service/app/: config.py  main.py
ingestion_service/app/api/: error_handlers.py  routes_ingest.py  schemas.py
ingestion_service/app/domain/: contracts.py  enums.py
ingestion_service/app/extractors/: base.py  csv_extractor.py  docx_extractor.py  pdf_extractor.py  (+2 more)
scripts/: make_fixtures.py
src/vbub_doc_ingestion/: __init__.py  config.py
tests/: conftest.py  test_adapter_fastapi.py  test_blob_store.py  test_content_classification_service.py  test_csv_extractor.py  test_docx_extractor.py  test_error_handling.py  test_health.py  test_ingest_file.py  test_normalization.py  test_package_api.py  test_package_domain_imports.py  test_package_standalone.py  test_parser_router.py  test_pdf_extractor.py  test_tag_policy.py  test_text_extractor.py  test_text_like_aliases.py  test_unsupported_binary_rejection.py  test_validation.py  test_xlsx_extractor.py
tests/fixtures/: sample.csv  sample.docx  sample.md  sample.txt  sample.xlsx
(+32 files in other folders)
